[gd_scene load_steps=57 format=2]

[ext_resource path="res://Problem/Circuits/Circuit1/system.gd" type="Script" id=1]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Problem/Circuits/Circuit1/download.png" type="Texture" id=3]
[ext_resource path="res://Problem/Circuits/Circuit1/Problems/Test/1.PNG" type="Texture" id=4]
[ext_resource path="res://Problem/Circuits/Circuit1/8-BIT WONDER.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/plus.png" type="Texture" id=6]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/minus.png" type="Texture" id=7]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/button2.png" type="Texture" id=8]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_01.png" type="Texture" id=9]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_02.png" type="Texture" id=10]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_03.png" type="Texture" id=11]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_04.png" type="Texture" id=12]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_05.png" type="Texture" id=13]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_06.png" type="Texture" id=14]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_07.png" type="Texture" id=15]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_09.png" type="Texture" id=16]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_10.png" type="Texture" id=17]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_11.png" type="Texture" id=18]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_12.png" type="Texture" id=19]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_13.png" type="Texture" id=20]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_14.png" type="Texture" id=21]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_15.png" type="Texture" id=22]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_16.png" type="Texture" id=23]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_17.png" type="Texture" id=24]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_18.png" type="Texture" id=25]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_19.png" type="Texture" id=26]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_20.png" type="Texture" id=27]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_21.png" type="Texture" id=28]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_22.png" type="Texture" id=29]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_23.png" type="Texture" id=30]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_24.png" type="Texture" id=31]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_25.png" type="Texture" id=32]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_26.png" type="Texture" id=33]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_27.png" type="Texture" id=34]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_28.png" type="Texture" id=35]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_29.png" type="Texture" id=36]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_30.png" type="Texture" id=37]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_32.png" type="Texture" id=38]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_33.png" type="Texture" id=39]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_34.png" type="Texture" id=40]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_35.png" type="Texture" id=41]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_36.png" type="Texture" id=42]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_37.png" type="Texture" id=43]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_38.png" type="Texture" id=44]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_39.png" type="Texture" id=45]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_40.png" type="Texture" id=46]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_41.png" type="Texture" id=47]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_42.png" type="Texture" id=48]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_43.png" type="Texture" id=49]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_44.png" type="Texture" id=50]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_45.png" type="Texture" id=51]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_46.png" type="Texture" id=52]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_47.png" type="Texture" id=53]
[ext_resource path="res://Problem/Circuits/Circuit1/sprites/current/sprite_48.png" type="Texture" id=54]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "current",
"speed": 25.0
} ]

[node name="system" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.807175
margin_right = -0.80719
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 90.5265 )

[node name="black" type="Sprite" parent="."]
position = Vector2( 209.807, 180 )
scale = Vector2( 3.29577, 3.77401 )
texture = ExtResource( 3 )

[node name="ckt" type="Sprite" parent="."]
position = Vector2( 144.807, 111 )
scale = Vector2( 0.328084, 0.309051 )
texture = ExtResource( 4 )

[node name="voltvalue" type="RichTextLabel" parent="."]
margin_left = 42.8072
margin_top = 103.0
margin_right = 72.8072
margin_bottom = 133.0
custom_fonts/normal_font = SubResource( 1 )
text = "0V"

[node name="res" type="RichTextLabel" parent="."]
margin_left = 105.807
margin_top = 54.0
margin_right = 114.807
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "5"

[node name="res2" type="RichTextLabel" parent="."]
margin_left = 209.807
margin_top = 110.0
margin_right = 220.807
margin_bottom = 124.0
custom_fonts/normal_font = SubResource( 1 )
text = "5"

[node name="question" type="RichTextLabel" parent="."]
margin_left = 18.8072
margin_top = 24.0
margin_right = 216.807
margin_bottom = 58.0
custom_fonts/normal_font = SubResource( 1 )
text = "get voltage value"

[node name="result" type="RichTextLabel" parent="."]
margin_left = 237.807
margin_top = 81.0
margin_right = 308.807
margin_bottom = 144.0
custom_fonts/normal_font = SubResource( 1 )

[node name="voltup" type="Button" parent="."]
margin_left = 42.8072
margin_top = 81.0
margin_right = 70.8072
margin_bottom = 103.0
icon = ExtResource( 6 )
flat = true

[node name="voltdown" type="Button" parent="."]
margin_left = 42.8072
margin_top = 110.0
margin_right = 70.8072
margin_bottom = 132.0
icon = ExtResource( 7 )
flat = true

[node name="submit" type="Button" parent="."]
margin_left = 232.807
margin_top = 132.0
margin_right = 308.807
margin_bottom = 154.0
icon = ExtResource( 8 )
flat = true

[node name="currentanim" type="AnimatedSprite" parent="."]
position = Vector2( 144.001, 121.513 )
scale = Vector2( 5.3941, 5.09291 )
frames = SubResource( 2 )
animation = "current"
frame = 43
playing = true

[node name="current" type="RichTextLabel" parent="."]
margin_left = 121.807
margin_top = 110.0
margin_right = 159.807
margin_bottom = 140.0
custom_fonts/normal_font = SubResource( 1 )
text = "5A"
[connection signal="pressed" from="voltup" to="." method="_on_voltup_pressed"]
[connection signal="pressed" from="voltdown" to="." method="_on_voltdown_pressed"]
[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]
